# System-Config-Server

./: .anjuta_sym_db.db  .gitignore  Makefile.am  README.txt  configure.ac
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
src/: Makefile.am  main.c  main.cc  system-config-server.c  system-config-server.h  system_config_server.glade  system_config_server.ui
src/GTKBuilderResources/: AboutWindow.glade  Main.glade
src/GladeResources/: AboutWindow.glade  Main.glade
src/ModuleSubsystem/: ServiceModuleMain.cc  ServiceModuleMain.h
src/Modules/bind/: BindService.cc  BindService.h
src/Modules/dhcpd/: DhcpdService.cc  DhcpdService.glade  DhcpdService.h
src/Modules/network/: NetworkService.cc  NetworkService.glade  NetworkService.h
src/Modules/network/NetworkServiceViewControllers/: NetworkInterface.glade  NetworkInterfaceViewController.cc  NetworkInterfaceViewController.h
src/ViewControllers/: GTKBuilderViewController.cc  GTKBuilderViewController.h
src/ViewControllers/AboutWindowViewController/: AboutWindowViewController.cc  AboutWindowViewController.h
src/ViewControllers/RootViewController/: RootViewController.cc  RootViewController.h
src/module_subsystem/: service_module_main.cc  service_module_main.h
src/viewcontrollers/: GTKBuilderViewController.cc  GTKBuilderViewController.h  GladeViewController.cc  GladeViewController.h
src/viewcontrollers/AboutWindowViewController/: AboutWindowViewController.cc  AboutWindowViewController.h
